Bug 39117 "[zoom]View Enlarge/Reduce Text Size doesn't work on mac".  Calculate zoom in nsFontMetricsMac::GetNativeTextStyle() and remove disabling of menus in viewZoomOverlay.  r=rbs, sr=sfraser, a=dbaron