gfx/src/mac/nsFontMetricsMac.cpp
@@ -444,6 +444,10 @@ NS_EXPORT void nsFontMetricsMac::GetNativeTextStyle(nsIFontMetrics& inMetrics,
 
 	RGBColor	black = {0};
 	
+  float textZoom = 1.0;
+  inDevContext.GetTextZoom(textZoom);
+  textSize *= textZoom;
+
 	outStyle.tsFont = (short)fontNum;
 	outStyle.tsFace = textFace;
 	outStyle.tsSize = textSize;
